kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: simple-app
  template:
    metadata:
      labels:
        name: simple-app
    spec:
      containers:
        - name: simple-app
          image: cr.yandex/crp4g65pbp8qf4mtcos7/simple:v2
          ports:
            - containerPort: 8080
      restartPolicy: Always
