kube/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ExternalName
  externalName: rc1b-wuaj5x303k5431f7.mdb.yandexcloud.net
