kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - aurora.pochemuto.com
    - homealone.pochemuto.com
    secretName: aurora-letsencrypt-prod
  rules:
  - host: aurora.pochemuto.com
    http:
      paths: 
      - path: "/"
        pathType: Prefix
        backend:
          serviceName: simple-app
          servicePort: 80
  - host: homealone.pochemuto.com
    http:
      paths: 
      - path: "/"
        pathType: Prefix
        backend:
          serviceName: simple-app
          servicePort: 80
