kube/simple-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app
spec:
  selector:
    name: simple-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: simple-app
  template:
    metadata:
      labels:
        name: simple-app
        app: simple
    spec:
      containers:
        - name: simple-app
          image: cr.yandex/crp4g65pbp8qf4mtcos7/simple:v27
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: simple-app
            items:
              - key: properties
                path: application-stable.yaml

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - homealone.pochemuto.com
      secretName: aurora-letsencrypt-prod
  rules:
    - host: homealone.pochemuto.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              serviceName: simple-app
              servicePort: 80
